--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,22 +12,10 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
 	integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
 	crossorigin="anonymous"></script>
-<title>Página de Login</title>
+<title>Página Inicial</title>
 </head>
 
 <body>
-	<div class="container">
-		<h1 style="color: red">Formulário de Login</h1>
-		<form class="col-5" th:action="@{/userLogin}" th:object="${regis}">
-
-			<label><h6>UserId</h6></label> <input type="text"
-				class="form-control" th:field="*{userId}" method="post"> 
-				
-			<label><h6>Password</h6></label>
-			<input type="password" class="form-control" th:field="*{password}">
-			<br>
-			<button type="submit" class="btn btn-success">Login</button>
-		</form>
-	</div>
+	<div class="container" style="color:green">Parábens por ter feito o login com sucesso!</div>
 </body>
 </html>
