Divemos que alterar alguma parte do código

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
-	<div class="container" style="color:green">Por favor! Corrija o NomeId e a Senha!</div>
+	<div class="container" style="color:red">Por favor! Corrija o NomeId e a Senha!</div>
+	
+	
 </body>
-</html>
+</html> 
