--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,10 +12,12 @@
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
 	integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
 	crossorigin="anonymous"></script>
-<title>Página Inicial</title>
+<title>página inicial</title>
 </head>
 
 <body>
-	<div class="container" style="color:green">Parábens por ter feito o login com sucesso!</div>
+	<div class="container" style="color:green"> <h1>Parábens por ter feito o login com sucesso!</h1></div>
+	<div class="container" style="color:red">Por favor! Corrija o NomeId e a Senha!</div>
+
 </body>
 </html>
