As alterações concluidas

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-	<div class="container" style="color:red">Por favor! Corrija o NomeId e a Senha!</div>
+	<div class="container" style="color:red">
+	<h1 th:text="${mensagem}">Por favor! Corrija o NomeId e a Senha!</h1></div>
 	
 	
 </body>
