--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<div class="container" style="color:green"><h1>Parábens por ter feito o login com sucesso!</h1></div>
+	<div class="container" style="color:green"><h1 th:text="${mensagem}">Parábens por ter feito o login com sucesso!</h1></div>
 	
 </body>
 </html>
